--- a/mFRMindex.html
+++ b/mFRMindex.html
@@ -5,18 +5,15 @@
     <!-- 1. Instant JavaScript Redirect -->
     <script>
         window.onload = function() {
-            window.location.href = "https://wa.me/212718949149?text=ختي%20بعيت%20نخدم،%20شرحي%20ليا%20كتر";
+            window.location.href = "https://chat.whatsapp.com/GODEJoQ4PMbAreL9xCXI9e";
         };
     </script>
-
     <!-- 2. Backup Redirect (Non-JS Browsers) -->
-    <meta http-equiv="refresh" content="0.1;url=https://wa.me/212718949149?text=ختي%20بعيت%20نخدم،%20شرحي%20ليا%20كتر">
-
+    <meta http-equiv="refresh" content="0.1;url=https://chat.whatsapp.com/GODEJoQ4PMbAreL9xCXI9e">
     <!-- 3. Ancient Browser Support -->
     <noscript>
-        <meta http-equiv="refresh" content="0.1;url=https://wa.me/212718949149?text=ختي%20بعيت%20نخدم،%20شرحي%20ليا%20كتر">
+        <meta http-equiv="refresh" content="0.1;url=https://chat.whatsapp.com/GODEJoQ4PMbAreL9xCXI9e">
     </noscript>
-
     <style>
         body {
             background: #25D366;
@@ -36,7 +33,7 @@
 <body>
     <!-- Visible only if all redirects fail -->
     <h2>جاري التحويل إلى واتساب...</h2>
-    <a href="https://wa.me/212718949149?text=ختي%20بعيت%20نخدم،%20شرحي%20ليا%20كتر" class="fallback-link">
+    <a href="https://chat.whatsapp.com/GODEJoQ4PMbAreL9xCXI9e" class="fallback-link">
         انقر هنا إذا لم يتم التحويل تلقائيًا
     </a>
 </body>
