Improved redirect logic

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- 1. Instant JavaScript Redirect -->
     <script>
         window.onload = function() {
-            window.location.href = "hhttps://wa.me/212663849628?text=ختي%20بعيت%20نخدم،%20شرحي%20ليا%20كتر";
+            window.location.href = "https://wa.me/212663849628?text=ختي%20بعيت%20نخدم،%20شرحي%20ليا%20كتر";
         };
     </script>
 
