--- a/index.html
+++ b/index.html
@@ -2,19 +2,34 @@
 <html dir="rtl" lang="ar">
 <head>
     <meta charset="UTF-8">
-    <!-- 1. Instant JavaScript Redirect -->
+    
+    <!-- TikTok Pixel Code Start -->
     <script>
-        window.onload = function() {
+    !function (w, d, t) {
+      w.TiktokAnalyticsObject=t;var ttq=w[t]=w[t]||[];ttq.methods=["page","track","identify","instances","debug","on","off","once","ready","alias","group","enableCookie","disableCookie","holdConsent","revokeConsent","grantConsent"],ttq.setAndDefer=function(t,e){t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}};for(var i=0;i<ttq.methods.length;i++)ttq.setAndDefer(ttq,ttq.methods[i]);ttq.instance=function(t){for(
+    var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n]);return e},ttq.load=function(e,n){var r="https://analytics.tiktok.com/i18n/pixel/events.js",o=n&&n.partner;ttq._i=ttq._i||{},ttq._i[e]=[],ttq._i[e]._u=r,ttq._t=ttq._t||{},ttq._t[e]=+new Date,ttq._o=ttq._o||{},ttq._o[e]=n||{};n=document.createElement("script")
+    ;n.type="text/javascript",n.async=!0,n.src=r+"?sdkid="+e+"&lib="+t;e=document.getElementsByTagName("script")[0];e.parentNode.insertBefore(n,e)};
+
+
+      ttq.load('CUA103RC77UC6T0VQL2G');
+      ttq.page();
+    }(window, document, 'ttq');
+    </script>
+    <!-- TikTok Pixel Code End -->
+
+    <!-- Redirect Logic -->
+    <script>
+        // Delay redirect to ensure pixel loads
+        setTimeout(function() {
             window.location.href = "https://wa.me/212663849628?text=ختي%20بعيت%20نخدم،%20شرحي%20ليا%20كتر";
-        };
+        }, 1500); // 1.5 second delay
     </script>
 
-    <!-- 2. Backup Redirect (Non-JS Browsers) -->
-    <meta http-equiv="refresh" content="0.1;url=https://wa.me/212663849628?text=ختي%20بعيت%20نخدم،%20شرحي%20ليا%20كتر">
+    <!-- Backup Redirect -->
+    <meta http-equiv="refresh" content="2;url=https://wa.me/212663849628?text=ختي%20بعيت%20نخدم،%20شرحي%20ليا%20كتر">
 
-    <!-- 3. Ancient Browser Support -->
     <noscript>
-        <meta http-equiv="refresh" content="0.1;url=https://wa.me/212663849628?text=ختي%20بعيت%20نخدم،%20شرحي%20ليا%20كتر">
+        <meta http-equiv="refresh" content="2;url=https://wa.me/212663849628?text=ختي%20بعيت%20نخدم،%20شرحي%20ليا%20كتر">
     </noscript>
 
     <style>
@@ -34,7 +49,6 @@
     </style>
 </head>
 <body>
-    <!-- Visible only if all redirects fail -->
     <h2>جاري التحويل إلى واتساب...</h2>
     <a href="https://wa.me/212663849628?text=ختي%20بعيت%20نخدم،%20شرحي%20ليا%20كتر" class="fallback-link">
         انقر هنا إذا لم يتم التحويل تلقائيًا
