tawjiih 1 index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script>
-    setTimeout(function(){
-      window.location.href = "رقم_الهاتف"; // https://wa.me/212655105015?text=ختي%20بعيت%20نخدم،%20شرحي%20ليا%20كتر
-    }, 10); // 10 مللي ثانية
-  </script>
+  <meta http-equiv="refresh" content="0;url=https://wa.me/212655105015?text=ختي%20بعيت%20نخدم،%20شرحي%20ليا%20كتر" />
 </head>
 <body>
-  <p>يتم التوجيه إلى واتساب...</p>
+  <p>Redirecting to WhatsApp...</p>
 </body>
 </html>
